--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link rel="stylesheet" href="style.css">
-		<title>50 Projects Day </title>
+		<title>Netflix Navigation</title>
 	</head>
 	<body>
 
